fix scrollbar css

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,5 +8,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: $primary;
   color: $fontColor;
+
+  ::-webkit-scrollbar {
+    width: 4px; /* ширина для вертикального скролла */
+    height: 4px; /* высота для горизонтального скролла */
+    background-color: $color1;
+  }
+
+  /* ползунок скроллбара */
+  ::-webkit-scrollbar-thumb {
+    background-color: $color3;
+    border-radius: 9em;
+    box-shadow: inset 1px 1px 10px $color5;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: $color4;
+  }
+
 }
+
 
